--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 83a102f
-	trimbase = 
+	trim = map_merger
+	base = 76c5916
+	trimbase = 83a102f
 	parent = upstream
 	previous = 35312b4
