--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 98795cf
-	trimbase = 
+	trim = adhoc_communication
+	base = 85440a6
+	trimbase = 98795cf
 	parent = upstream
 	previous = 35312b4
