--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 76c5916
+	base = ac8fd25
 	trimbase = 
 	parent = release/hydro/map_merger
-	previous = 
+	previous = 76c5916
