--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 643f058
+	base = cf3e958
 	trimbase = 
 	parent = debian/hydro/map_merger
-	previous = 
+	previous = 643f058
