--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 85440a6
+	base = a3a67ab
 	trimbase = 
 	parent = release/hydro/adhoc_communication
-	previous = 
+	previous = 85440a6
