--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e14c2ad
+	base = 8157125
 	trimbase = 
 	parent = debian/hydro/adhoc_communication
-	previous = 
+	previous = e14c2ad
