--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a7c9943
+	base = 51d4e1d
 	trimbase = 
 	parent = rpm/hydro/map_merger
-	previous = 
+	previous = a7c9943
