--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 708c1ce
+	base = 73cce7a
 	trimbase = 
 	parent = rpm/hydro/adhoc_communication
-	previous = 
+	previous = 708c1ce
