--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_merger
-	base = 72b9120
-	trimbase = 
+	base = ded2375
+	trimbase = 72b9120
 	parent = upstream
 	previous = 2159c52
