--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = cc58b61
-	trimbase = 
+	trim = explorer
+	base = 3c49b9a
+	trimbase = cc58b61
 	parent = upstream
 	previous = 2159c52
