--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = adhoc_communication
-	base = 757ec73
-	trimbase = 
+	base = 95c3199
+	trimbase = 757ec73
 	parent = upstream
 	previous = 2159c52
