--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3c49b9a
+	base = 72ce128
 	trimbase = 
 	parent = release/hydro/explorer
-	previous = 
+	previous = 3c49b9a
