--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5f0dec8
+	base = 6028a3c
 	trimbase = 
 	parent = debian/hydro/explorer
-	previous = 
+	previous = 5f0dec8
