--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3c49b9a
+	base = d7f35af
 	trimbase = 
 	parent = release/hydro/explorer
-	previous = 
+	previous = 3c49b9a
