--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7a836dc
+	base = cd4e65d
 	trimbase = 
 	parent = rpm/hydro/explorer
-	previous = 
+	previous = 7a836dc
