--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.1-0": ["Mon Sep 29 2014", "Guenther Cwioro", "g.cwioro@gmx.net"]}
+{"0.1.1-0": ["Mon Sep 29 2014", "Guenther Cwioro", "g.cwioro@gmx.net"], "0.1.1-1": ["Mon Sep 29 2014", "Guenther Cwioro", "g.cwioro@gmx.net"]}
