--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_merger
-	base = ef8d5b7
-	trimbase = 
+	base = 0b2295c
+	trimbase = ef8d5b7
 	parent = upstream
 	previous = 2159c52
