--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = explorer
-	base = 4e673e5
-	trimbase = 
+	base = 523a576
+	trimbase = 4e673e5
 	parent = upstream
 	previous = 2159c52
