--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = adhoc_communication
-	base = 2d854dc
-	trimbase = 
+	base = 8b3120d
+	trimbase = 2d854dc
 	parent = upstream
 	previous = 2159c52
