--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_merger
-	base = 03ace45
-	trimbase = 
+	base = c1b741e
+	trimbase = 03ace45
 	parent = upstream
 	previous = 355c0b8
