--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = explorer
-	base = 2f6e1be
-	trimbase = 
+	base = 7673dff
+	trimbase = 2f6e1be
 	parent = upstream
 	previous = 355c0b8
