--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = adhoc_communication
-	base = 783a511
-	trimbase = 
+	base = 98c88c0
+	trimbase = 783a511
 	parent = upstream
 	previous = 355c0b8
