Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.1-1": ["Mon Sep 29 2014", "dneuhold", "dneuhold@todo.todo"], "0.1.1-2": ["Mon Sep 29 2014", "dneuhold", "dneuhold@todo.todo"]}
+{"0.1.1-1": ["Mon Sep 29 2014", "dneuhold", "dneuhold@todo.todo"], "0.1.1-2": ["Mon Sep 29 2014", "dneuhold", "dneuhold@todo.todo"], "0.1.2-0": ["Mon Sep 29 2014", "dneuhold", "dneuhold@todo.todo"]}
