--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_merger
-	base = 90574ce
-	trimbase = 
+	base = 4877cb2
+	trimbase = 90574ce
 	parent = upstream
 	previous = 41f087f
