--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = adhoc_communication
-	base = 2868b71
-	trimbase = 
+	base = 5668b6e
+	trimbase = 2868b71
 	parent = upstream
 	previous = 41f087f
