--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = explorer
-	base = 8bb9cbd
-	trimbase = 
+	base = c19bbc1
+	trimbase = 8bb9cbd
 	parent = upstream
 	previous = 41f087f
