--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = adhoc_communication
-	base = ff726f0
-	trimbase = 
+	base = 02af98f
+	trimbase = ff726f0
 	parent = upstream
 	previous = 396f1a7
