--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = explorer
-	base = d3b3394
-	trimbase = 
+	base = 49d635a
+	trimbase = d3b3394
 	parent = upstream
 	previous = 396f1a7
