--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>map_merger</name>
-  <version>0.1.2</version>
+  <version>0.1.3</version>
   <description> Map merger is a package to merge several maps on the fly to one global map, if possible </description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
@@ -50,6 +50,8 @@
   <run_depend>message_runtime</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>message_generation</run_depend>
+  <build_depend>opencv2</build_depend>
+  <run_depend>opencv2</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- You can specify that this package is a metapackage here: -->
