--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_merger
-	base = 5c2f3c9
-	trimbase = 
+	base = 0ac7b92
+	trimbase = 5c2f3c9
 	parent = upstream
 	previous = 396f1a7
