--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = adhoc_communication
-	base = 74338b3
-	trimbase = 
+	base = 912528f
+	trimbase = 74338b3
 	parent = upstream
 	previous = 396f1a7
