--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = explorer
-	base = 11682ad
-	trimbase = 
+	base = f10c56a
+	trimbase = 11682ad
 	parent = upstream
 	previous = 396f1a7
