--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_merger
-	base = 4419018
-	trimbase = 
+	base = fb6e5a4
+	trimbase = 4419018
 	parent = upstream
 	previous = 396f1a7
