--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = adhoc_communication
-	base = 7f71eff
-	trimbase = 
+	base = 9949536
+	trimbase = 7f71eff
 	parent = upstream
 	previous = 396f1a7
