--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_merger
-	base = 664b73a
-	trimbase = 
+	base = 294854b
+	trimbase = 664b73a
 	parent = upstream
 	previous = 396f1a7
