--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = adhoc_communication
-	base = dd38e5c
-	trimbase = 
+	base = f65b9b3
+	trimbase = dd38e5c
 	parent = upstream
 	previous = 396f1a7
