--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = explorer
-	base = 5ec5555
-	trimbase = 
+	base = a2c4c53
+	trimbase = 5ec5555
 	parent = upstream
 	previous = 396f1a7
