--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_merger
-	base = 846c8cd
-	trimbase = 
+	base = bf79e66
+	trimbase = 846c8cd
 	parent = upstream
 	previous = 396f1a7
