--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = explorer
-	base = c77091c
-	trimbase = 
+	base = 167b4ac
+	trimbase = c77091c
 	parent = upstream
 	previous = 396f1a7
