--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = adhoc_communication
-	base = 9d3398e
-	trimbase = 
+	base = 3d82f85
+	trimbase = 9d3398e
 	parent = upstream
 	previous = 396f1a7
