--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_merger
-	base = 07c1793
-	trimbase = 
+	base = fe10ccf
+	trimbase = 07c1793
 	parent = upstream
 	previous = 396f1a7
