--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = adhoc_communication
-	base = 6c2d260
-	trimbase = 
+	base = b953a60
+	trimbase = 6c2d260
 	parent = upstream
 	previous = 396f1a7
