--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = explorer
-	base = 3b7e541
-	trimbase = 
+	base = 32afc0a
+	trimbase = 3b7e541
 	parent = upstream
 	previous = 396f1a7
