--- a/adhoc_communication/package.xml
+++ b/adhoc_communication/package.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0"?>
 <package>
   <name>adhoc_communication</name>
-  <version>0.1.3</version>
-  <description>The adhoc_communication package enabling ad hoc communication between robots.</description>
+  <version>0.1.8</version>
+  <description>The adhoc_communication package allows to exchange data over an ad-hoc network setup by robots running the corresponding node. The package allows you to exchange data over serveral roscores by wrapping transmitting the data to the destination and publishing the data on a predefined topic at the destination host. Routing is accomplished using the hostname of the robots.
+  </description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="g.cwioro@gmx.net">Guenther Cwioro</maintainer>
+
+  <author email="g.cwioro@gmx.net">Guenter Cwioro</author>
+  <author email="torsten.andre@aau.at">Torsten Andre</author>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
