--- a/explorer/package.xml
+++ b/explorer/package.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0"?>
 <package>
   <name>explorer</name>
-  <version>0.1.3</version>
-  <description>The explorer package</description>
+  <version>0.1.8</version>
+  <description>
+      The explorer package utilizes frontier based exploration for multi-robot systems. Beside frontier detection, coordinated and uncoordinated exploration strategies are available to select goal points. Coordinated exploration enhances robot distribution and reduces redundancy in exploration reducing exploration time.
+  </description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="dneuhold@todo.todo">dneuhold</maintainer>
+  <maintainer email="dneuhold@edu.aau.at">Daniel Neuhold</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -25,7 +27,8 @@
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
   <!-- Authors do not have to be maintianers, but could be -->
   <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
+  <author email="dneuhold@edu.aau.at">Daniel Neuhold</author>
+  <author email="torsten.andre@aau.at">Torsten Andre</author>
 
 
   <!-- The *_depend tags are used to specify dependencies -->
