--- a/map_merger/package.xml
+++ b/map_merger/package.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0"?>
 <package>
   <name>map_merger</name>
-  <version>0.1.3</version>
+  <version>0.1.8</version>
   <description> Map merger is a package to merge several maps on the fly to one global map, if possible </description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="peter_kohout@gmx.at">Peter Kohout</maintainer>
+
+  <author email="peter_kohout@gmx.at">Peter Kohout</author>
+  <author email="torsten.andre@aau.at">Torsten Andre</author>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -50,8 +53,8 @@
   <run_depend>message_runtime</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>message_generation</run_depend>
-  <build_depend>opencv2</build_depend>
-  <run_depend>opencv2</run_depend>
+  <build_depend>libopencv-dev</build_depend>
+  <run_depend>libopencv-dev</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- You can specify that this package is a metapackage here: -->
