--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 44dd1ea
-	trimbase = 
+	trim = map_merger
+	base = 81ffcb9
+	trimbase = 44dd1ea
 	parent = upstream
 	previous = 3facd91
