--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 509ea93
-	trimbase = 
+	trim = explorer
+	base = e105bac
+	trimbase = 509ea93
 	parent = upstream
 	previous = 3facd91
