--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d468ebb
-	trimbase = 
+	trim = adhoc_communication
+	base = ec5e8a1
+	trimbase = d468ebb
 	parent = upstream
 	previous = 3facd91
