--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e601088
+	base = 5396988
 	trimbase = 
 	parent = debian/indigo/adhoc_communication
-	previous = 
+	previous = e601088
