--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 81ffcb9
+	base = 189efe4
 	trimbase = 
 	parent = release/indigo/map_merger
-	previous = 
+	previous = 81ffcb9
