--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 208e643
+	base = 4f7b0e3
 	trimbase = 
 	parent = debian/indigo/map_merger
-	previous = 
+	previous = 208e643
