--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dacc2cc
+	base = 46393f5
 	trimbase = 
 	parent = debian/indigo/explorer
-	previous = 
+	previous = dacc2cc
