--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ec5e8a1
+	base = de79dce
 	trimbase = 
 	parent = release/indigo/adhoc_communication
-	previous = 
+	previous = ec5e8a1
