--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 26574d4
+	base = 21740ee
 	trimbase = 
 	parent = rpm/indigo/adhoc_communication
-	previous = 
+	previous = 26574d4
