--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8428248
+	base = f7e4475
 	trimbase = 
 	parent = rpm/indigo/map_merger
-	previous = 
+	previous = 8428248
