--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e105bac
+	base = d188014
 	trimbase = 
 	parent = release/indigo/explorer
-	previous = 
+	previous = e105bac
