--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1a84479
+	base = d9cb378
 	trimbase = 
 	parent = rpm/indigo/explorer
-	previous = 
+	previous = 1a84479
